<resources>
    <string name="app_name">Кинопоиск</string>
    <string name="title_home">Медиа</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="media_text">Медиа</string>
    <string name="now_in_cinema">Сегодня в кино</string>
    <string name="rating_text">Фильмы по рейтингу</string>
    <string name="input_rating">Введите рейтинг</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Описание:</string>
    <string name="watch_text">Смотреть:</string>
</resources>